[gd_scene load_steps=5 format=3 uid="uid://bdlfwljpolils"]

[ext_resource type="Texture2D" uid="uid://dkmtrktlu5jfw" path="res://assests/Sprite Pack 2/8 - Comrade Cheese Puff/Missile (16 x 8).png" id="1_aqbwk"]
[ext_resource type="Script" path="res://missile.gd" id="1_tnthl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptme1"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uuex"]
size = Vector2(16, 6)

[node name="missile" type="AnimatableBody2D"]
collision_layer = 8
collision_mask = 3
sync_to_physics = false
script = ExtResource("1_tnthl")

[node name="collision_m" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ptme1")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 5.96046e-08)
scale = Vector2(1.1875, 1.5)
texture = ExtResource("1_aqbwk")

[node name="collision_detection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="collision_d" type="CollisionShape2D" parent="collision_detection"]
shape = SubResource("RectangleShape2D_8uuex")

[connection signal="body_entered" from="collision_detection" to="." method="_on_collision_detection_body_entered"]
